<resources>
    <string name="app_name">Amazing Prank Call</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="start_timer">Activate Prank Call </string>
    <string name="swipe_up_to_answer">Click to answer</string>
    <string name="swipe_down_to_reject">Swipe down to reject</string>

    <string name="add_mob_id">ca-app-pub-5767435838615710~7385482539</string>
    <string name="banner_home">ca-app-pub-5767435838615710/7736836329</string>
    <string name="call_end_fullscreen">ca-app-pub-5767435838615710/2834781866</string>
    <string name="banner_call_screen">ca-app-pub-5767435838615710/7736836329</string>
    <string name="remember_this_name">Remember name</string>
    <string name="remember_mobile_number">Remember mobile number</string>

    <!-- For testing purpose use this -->
    <!--<string name="add_mob_id"> ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_home">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_call_screen">ca-app-pub-3940256099942544/6300978111</string>
    <string name="call_end_fullscreen">ca-app-pub-3940256099942544/1033173712</string>-->
</resources>
